cmake_minimum_required(VERSION 3.9)
project(bitwy2)

set(CMAKE_CXX_STANDARD 11)

add_executable(bitwy2 main.cpp Oddzial.cpp Oddzial.h Wsparcie.cpp Wsparcie.h Wspolrzedne.cpp Wspolrzedne.h Rozgrywka.cpp Rozgrywka.h Zwarcie.cpp Zwarcie.h Zasieg.cpp Zasieg.h Konny.cpp Konny.h Halabardzista.cpp Halabardzista.h Miecznik.cpp Miecznik.h Lucznik.cpp Lucznik.h Kusznik.cpp Kusznik.h Bebniarz.cpp Bebniarz.h Tarczownik.cpp Tarczownik.h)